--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
@@ -24,6 +24,8 @@ Each specific substitution model has a uniquely defined instantaneous-rate matri
 
 In this tutorial you will perform phylogeny inference under common models of DNA sequence evolution: JC, F81, HKY85, GTR, GTR+Gamma and GTR+Gamma+I.
 For all of these substitution models, you will perform an MCMC analysis to estimate phylogeny and other model parameters.
+For the sake of simplicity we will assume a simple birth-death tree prior and a known, fixed clock rate.
+All the assumptions will be covered more in detail later in this tutorial.
 
 \subsection*{Requirements}
 We assume that you have read and hopefully completed the following tutorials:
@@ -31,7 +33,10 @@ We assume that you have read and hopefully completed the following tutorials:
 \item RB\_Getting\_Started
 \item RB\_Basics\_Tutorial
 \end{itemize}
-
+Note that the RB\_Basics\_Tutorial introduces the basic syntax of \Rev~but does not cover any phylogenetic models.
+You may skip the RB\_Basics\_Tutorial if you have some familiarity with \R.
+We tried to keep this tutorial very basic and introduce all the language concepts on the way.
+You may only need the RB\_Basics\_Tutorial for a more in-depth discussion of concepts in \Rev.
 
 
 %%%%%%%%
@@ -60,7 +65,7 @@ In the \cl{data} folder, you will find the following files
 
 The first section of this exercise involves:
 (1) setting up a Jukes-Cantor (JC) substitution model for an alignment of the cytochrome b subunit;
-(2) approximating the posterior probability of the tree topology and branch lengths (and all other parameters) using MCMC, and; 
+(2) approximating the posterior probability of the tree topology and node ages (and all other parameters) using MCMC, and; 
 (3) summarizing the MCMC output by computing the maximum \textit{a posteriori} tree. 
 
 \begin{figure}[h!]
